# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py
gendiff/utils/: __init__.py  cli.py  file_parser.py  parse_file.py
hexlet_code/: gendiff.py
tests/: fixtures.py  test_gendiff.py
